# MiniWinstall

./: Cargo.toml  PKGBUILD  README.md  index.html  metadata.json  server.ts
.github/workflows/: build-iso.yml  release.yml
src/: App.tsx  main.rs  rustTemplate.ts  types.ts
workflow/: release.yml
